# Confidence-based-generative-data-Augmentation-for-Meta-Learning

./: .gitattributes  .gitignore  README.md  main_utils.py  pyproject.toml  tutorial_utils.py
baselines/finetuning/: config.json  helpers_finetuning.py  model.py  network.py
baselines/finetuning_episodic/: helpers_finetuning.py  model.py  network.py
baselines/maml/: helpers_maml.py  model.py  network.py
baselines/maml_batch/: config.json  helpers_maml.py  model.py
baselines/matchingnet/: helpers_matchingnet.py  model.py  network.py
baselines/metadelta/: backbone.py  config.json  model.py  utils.py
baselines/protonet/: api.py  config.json  helpers_protonet.py  model.py
baselines/random/: api.py  model.py
baselines/train_from_scratch/: model.py  network.py
cdmetadl/: confidence_estimator.py  dashboard.py  eval.py  logger.py  run.py  train.py
cdmetadl/api/: api.py
cdmetadl/augmentation/: __init__.py  augmentation.py  generative_augmentation.py  pseudo_augmentation.py  standard_augmentation.py
cdmetadl/confidence/: __init__.py  confidence_estimator.py  constant_confidence_provider.py  mc_dropout_estimator.py  pseudo_confidence_estimator.py
cdmetadl/config/: config.py  schema.py
cdmetadl/controlnet/: initial_augmentation_tests.ipynb
cdmetadl/dataset/: __init__.py  generator.py  image_dataset.py  meta_image_dataset.py  split.py  task.py
cdmetadl/helpers/: general_helpers.py  ingestion_helpers.py  initial_setup.py  scoring_helpers.py
cdmetadl/ingestion/: competition_logger.py  data_generator.py  image_dataset.py  ingestion.py
cdmetadl/notebooks/: augmentation tests_transformation_pipeline.ipynb  augmentation.ipynb  confidence_estimation.ipynb  confidence_estimation_Finetuning.ipynb  confidence_estimation_MAML.ipynb  diffusion_augementation.ipynb  diffusion_augmentation BCT.ipynb  diffusion_augmentation CRS.ipynb  diffusion_augmentation DOG.ipynb  diffusion_augmentation_APL.ipynb  diffusion_augmentation_BCT.ipynb  diffusion_augmentation_BRD.ipynb  diffusion_augmentation_BRD_parameter_shuffle.ipynb  diffusion_augmentation_BRD_parameter_tests.ipynb  diffusion_augmentation_CRS.ipynb  diffusion_augmentation_DOG.ipynb  evaluation.ipynb  experiments_consistency_of_confidence_scores.ipynb  helpers.py  initial_augmentation_tests.ipynb  qualiative_analysis.ipynb
cdmetadl/samplers/: sampler.py
cdmetadl/scheduler/: CommandBastler.ipynb  TaskHandler.py  app.py  baselines.csv  dropout_baselines.csv  generative.csv  pseudo.csv  scripts.csv  scripts1.csv  scripts1_train.csv  scripts2.csv  scripts2_train.csv  standard.csv
cdmetadl/scoring/: scoring.py
configs/: full.yml  train.yml
configs/eval/: baseline.yml  baseline_constant_confidence_k_1.yml  baseline_constant_confidence_k_10.yml  baseline_constant_confidence_k_5.yml  experiment.yml  generative_aug_constant_confidence_k_1.yml  generative_aug_constant_confidence_k_10.yml  generative_aug_constant_confidence_k_5.yml  generative_aug_gt_k_1.yml  generative_aug_gt_k_10.yml  generative_aug_gt_k_5.yml  generative_aug_mc_k_1.yml  generative_aug_mc_k_10.yml  generative_aug_mc_k_5.yml  pseudo_aug_constant_confidence_k_1.yml  pseudo_aug_gt_k_1.yml  (+16 more)
scripts/: baseline.sh  eval.sh  isolated_run.sh  standard_augment_all.sh  standard_augment_mc.sh  train.sh
(+1225 files in other folders)
