[tool.poetry]
name = "cd-metadl"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{ include = "cdmetadl" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

torch = { version = "^2.1.1" }
torchvision = { version = "^0.16" }
pyyaml = "^6.0.1"
pandas = { extras = ["pyarrow"], version = "^2.2.0" }
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
numpy = "^1.26.1"
scipy = "1.10"
pillow = "^10.1.0"
jinja2 = "3.1.0"
more-itertools = "^10.1.0"
tqdm = "^4.66.1"
plotly = "^5.18.0"
dash = "^2.14.2"
dash-mantine-components = "^0.12.1"
opencv-python = "^4.9.0.80"
diffusers = "^0.25.0"
xformers = "^0.0.23.post1"
transformers = "^4.36.2"
accelerate = "^0.26.1"
addict = "^2.4.0"
prettytable = "^3.9.0"
timm = "^0.9.12"
einops = "^0.7.0"
kaleido = "0.2.1"
controlnet-aux = "^0.0.7"
tensorboard = "^2.15.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
requests = "^2.31.0"
yapf = "^0.40.2"
pytest = "^7.4.3"

[tool.yapf]
COLUMN_LIMIT = 120
SPLIT_COMPLEX_COMPREHENSION = true
DEDENT_CLOSING_BRACKETS = true
COALESCE_BRACKETS = true
SPLIT_BEFORE_NAMED_ASSIGNS = false
ALLOW_SPLIT_BEFORE_DICT_VALUE = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
